# pg-linux-template

./: CMakeLists.txt  README.md  build.sh
data/: 6887_allied_avenger.mtl
src/: camera.cpp  camera.hpp  main.cpp  material.cpp  material.hpp  matrix3x3.cpp  matrix3x3.hpp  mymath.hpp  objloader.cpp  objloader.hpp  raytracer.cpp  raytracer.hpp  simplegui.cpp  simplegui.hpp  structs.hpp  surface.cpp  surface.hpp  texture.cpp  texture.hpp  triangle.cpp  triangle.hpp  tutorials.cpp  tutorials.hpp  utils.cpp  utils.hpp  vector3.cpp  vector3.hpp  vertex.cpp  vertex.hpp
